--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -9,9 +9,8 @@ authorImage = "/images/profile.jpg"
 paginate = 5
 
 Title = "Hi there!"
-content = "We make pretty games for you!♡"
+content = "We make pretty games for you! ♡"
 imageUrl = "/images/avatar.jpg"
-
 
 # To add a new social icon (More social icons can be found in JuiceBar\layouts\partials\svg.html.)
 [[params.social]]
@@ -32,14 +31,17 @@ category = "categories"
 
 # To add a new navigation link
 [[menu.main]]
-name = "About"
+name = "about"
 url = "/about"
+weight = 1
 [[menu.main]]
-name = "Hopper"
+name = "hopper"
 url = "/hopper"
-[[menu.main]]
-name = "Blog"
-url = "/blog"
+weight = 2
+#[[menu.main]]
+#name = "blog"
+#url = "/blog"
+#weight = 3
 
 
 # leave comments through GitHub Discussions
